Implement services for Category, Country, Order, Payment, Product, Resource, Shipping Address, State, and User with CRUD operations and JSON patch support.