@@ -1,50 +1,79 @@
 package com.playmatsec.app.controller;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import lombok.RequiredArgsConstructor;
-
-import java.util.List;
+import com.playmatsec.app.controller.model.ProductDTO;
 import com.playmatsec.app.repository.model.Product;
+import com.playmatsec.app.service.ProductService;
+
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 @RestController
 @RequiredArgsConstructor
+@Slf4j
 public class ProductsController {
+  private final ProductService productService;
+
   @GetMapping("/products")
-  public ResponseEntity<List<Product>> getProducts() {
-    return ResponseEntity.ok(List.of(new Product()));
+  public ResponseEntity<List<Product>> getProducts(
+    @RequestHeader Map<String, String> headers,
+    @RequestParam(required = false) String name,
+    @RequestParam(required = false) String description,
+    @RequestParam(required = false) Double price,
+    @RequestParam(required = false) Boolean isCustomizable
+  ) {
+    log.info("headers: {}", headers);
+    List<Product> products = productService.getProducts(name, description, price, isCustomizable);
+    return products != null ? ResponseEntity.ok(products) : ResponseEntity.ok(Collections.emptyList());
   }
 
   @GetMapping("/products/{id}")
-  public ResponseEntity<Product> getProductById(@PathVariable Long id) {
-    return ResponseEntity.ok(new Product());
+  public ResponseEntity<Product> getProductById(@RequestHeader Map<String, String> headers, @PathVariable String id) {
+    log.info("headers: {}", headers);
+    Product product = productService.getProductById(id);
+    return product != null ? ResponseEntity.ok(product) : ResponseEntity.notFound().build();
   }
 
   @DeleteMapping("/products/{id}")
-  public ResponseEntity<Boolean> deleteProductById(@PathVariable Long id) {
-    return ResponseEntity.ok(true);
+  public ResponseEntity<Boolean> deleteProductById(@RequestHeader Map<String, String> headers, @PathVariable String id) {
+    log.info("headers: {}", headers);
+    boolean deleted = productService.deleteProduct(id);
+    return deleted ? ResponseEntity.ok(true) : ResponseEntity.notFound().build();
   }
 
   @PostMapping("/products")
-  public ResponseEntity<Product> createProduct(@RequestBody Product product) {
-    return ResponseEntity.ok(new Product());
+  public ResponseEntity<Product> createProduct(@RequestHeader Map<String, String> headers, @RequestBody ProductDTO product) {
+    log.info("headers: {}", headers);
+    Product createdProduct = productService.createProduct(product);
+    return createdProduct != null ? ResponseEntity.ok(createdProduct) : ResponseEntity.badRequest().build();
   }
 
   @PatchMapping("/products/{id}")
-  public ResponseEntity<Product> updateProduct(@PathVariable Long id, @RequestBody Product product) {
-    return ResponseEntity.ok(new Product());
+  public ResponseEntity<Product> updateProduct(@RequestHeader Map<String, String> headers, @PathVariable String id, @RequestBody String patchBody) {
+    log.info("headers: {}", headers);
+    Product updatedProduct = productService.updateProduct(id, patchBody);
+    return updatedProduct != null ? ResponseEntity.ok(updatedProduct) : ResponseEntity.notFound().build();
   }
 
   @PutMapping("/products/{id}")
-  public ResponseEntity<Product> replaceProduct(@PathVariable Long id, @RequestBody Product product) {
-    return ResponseEntity.ok(new Product());
+  public ResponseEntity<Product> replaceProduct(@RequestHeader Map<String, String> headers, @PathVariable String id, @RequestBody ProductDTO product) {
+    log.info("headers: {}", headers);
+    Product replacedProduct = productService.updateProduct(id, product);
+    return replacedProduct != null ? ResponseEntity.ok(replacedProduct) : ResponseEntity.notFound().build();
   }
 }
